# write-yourself-a-typed-functional-language

./: .gitignore  Makefile  write-ftpl.cabal
src/: BiSTLC.hs  LLC.hs  LambdaPi.hs  STLC.hs  Ty.hs
